changed 'ships I own' label to 'sets', made adding builds appear in the correct color, left aligned user builds and sets

--- a/sites/all/themes/custom/Starwars/css/style.css
+++ b/sites/all/themes/custom/Starwars/css/style.css
@@ -32,7 +32,7 @@ a.wiki-link {
 }
 
 .ships, .builds, .profile_info {
-  text-align: center;
+  /*text-align: center;*/
   background: rgba(255,255,255,0.5);
   margin: 3%;
   padding: 1%;
@@ -57,6 +57,6 @@ a.wiki-link {
   align-items: stretch;
 }
 
-.form-item-field-builds-und-0-title, .form-item-field-builds-und-0-url {
+.form-item-field-builds-und-0-title, .form-item-field-builds-und-0-url, .link-field-subrow {
   color: black;
 }
